--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer": "^2.4.1",
+    "framer-motion": "^11.2.11",
     "motion": "^10.18.0",
     "next": "14.2.4",
     "react": "^18",
