--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
     "framer": "^2.4.1",
-    "framer-motion": "^11.2.11",
+    "framer-motion": "^10.13.1",
     "motion": "^10.18.0",
     "next": "14.2.4",
     "react": "^18",
