--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "firebase": "^10.12.2",
     "framer": "^2.4.1",
     "framer-motion": "^10.13.1",
@@ -16,7 +17,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
