--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@tiptap/pm": "^2.5.4",
+    "@tiptap/react": "^2.5.4",
+    "@tiptap/starter-kit": "^2.5.4",
+    "ckeditor5": "^42.0.1",
     "firebase": "^10.12.2",
     "framer": "^2.4.1",
     "framer-motion": "^10.13.1",
@@ -18,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1"
